simplify styling and introduce material UI components

--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,16 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
+    <script src="https://use.fontawesome.com/135d04cbb0.js"></script>
 
     <title>GitHub Finder V2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="back"></div>
 
     <!-- react-bootstrap  -->
+
     <script
       src="https://unpkg.com/react/umd/react.production.min.js"
       crossorigin
