add styling, update navbar and add footer

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
+    <!-- <link rel="icon" href="favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
 
     <link rel="manifest" href="manifest.json" />
     <link
@@ -20,7 +20,7 @@
     />
     <script src="https://use.fontawesome.com/135d04cbb0.js"></script>
 
-    <title>GitHub Finder V2</title>
+    <title>GitHub Universe Visualizer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
