--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="back"></div>
+    <div id="root"></div>
 
     <!-- react-bootstrap  -->
 
